--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.4",
+    "@react-navigation/native": "^7.0.14",
     "expo": "~54.0.30",
-    "expo-status-bar": "~3.0.9",
+    "expo-constants": "~17.0.5",
+    "expo-font": "~13.0.3",
+    "expo-haptics": "~14.0.2",
+    "expo-linking": "~7.0.6",
+    "expo-print": "~14.0.2",
+    "expo-router": "~5.0.12",
+    "expo-sensors": "~14.0.4",
+    "expo-sharing": "~13.0.3",
+    "expo-splash-screen": "~0.30.2",
+    "expo-status-bar": "~2.0.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.9",
     "typescript": "~5.9.2"
   },
   "private": true
