--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.4",
-    "@react-navigation/native": "^7.0.14",
-    "expo": "~54.0.30",
-    "expo-constants": "~17.0.5",
-    "expo-font": "~13.0.3",
-    "expo-haptics": "~14.0.2",
-    "expo-linking": "~7.0.6",
-    "expo-print": "~14.0.2",
-    "expo-router": "~5.0.12",
-    "expo-sensors": "~14.0.4",
-    "expo-sharing": "~13.0.3",
-    "expo-splash-screen": "~0.30.2",
-    "expo-status-bar": "~2.0.1",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^6.0.0",
+    "expo": "~51.0.0",
+    "expo-constants": "~16.0.0",
+    "expo-font": "~12.0.0",
+    "expo-haptics": "~13.0.0",
+    "expo-linking": "~6.3.0",
+    "expo-print": "~13.0.0",
+    "expo-router": "~3.5.0",
+    "expo-sensors": "~13.0.0",
+    "expo-sharing": "~12.0.0",
+    "expo-splash-screen": "~0.27.0",
+    "expo-status-bar": "~1.12.0",
+    "react": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
-    "babel-preset-expo": "^54.0.9",
-    "typescript": "~5.9.2"
+    "@types/react": "~18.2.0",
+    "babel-preset-expo": "^11.0.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
