--- a/app.json
+++ b/app.json
@@ -27,8 +27,9 @@
       "package": "com.mindfulmoments.app",
       "permissions": [
         "android.permission.VIBRATE",
-        "android.permission.ACCELEROMETER"
-      ]
+        "android.permission.HIGH_SAMPLING_RATE_SENSORS"
+      ],
+      "jsEngine": "hermes"
     },
     "web": {
       "favicon": "./assets/favicon.png"
