--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^6.0.0",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
@@ -26,7 +27,8 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-refresh": "^0.18.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
